--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "start": "vue-cli-service serve --fix"
   },
   "dependencies": {
+    "apollo-boost": "^0.4.7",
     "core-js": "^3.6.4",
     "element-ui": "^2.12.0",
+    "graphql": "^14.5.8",
     "vue": "^2.6.11",
+    "vue-apollo": "^3.0.2",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
   },
