--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   },
   "dependencies": {
     "core-js": "^3.6.1",
-    "element-ui": "^2.12.0",
     "vue": "^2.6.11",
     "vue-router": "^3.1.3",
+    "element-ui": "2.12.0",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
